test/classes/initializers/compilerGenerated/parent_inherits_constructor.good
parent_inherits_constructor.chpl:9: note: Constructors have been deprecated as of Chapel 1.18. Please use initializers instead.
parent_inherits_constructor.chpl:9: warning: Type 'GrandParent' defines a constructor here
parent_inherits_constructor.chpl:14: error: Cannot create default initializer on type 'Parent', which inherits from type 'GrandParent' that defines a constructor
